2008-01-18 18:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.2
	
2007-07-24 18:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/ColorSchemes/NSColorStringMethods.h: Minor correction,
	changed to use #ifndef instead of #ifdef.

2007-03-07  Nicola Pero <nicola.pero@meta-innovation.com>

	The application now compiles and runs on MinGW.
	* SystemPreferences/SystemPreferences.m (changeFont:): New method
	that forwards changeFont: to the current pane if it responds to
	the selector.
	* SystemPreferences/SystemPreferences.h (changeFont:): New method.
	* Modules/Fonts/FontModule.m: Removed category/notification
	workaround to get the changeFont: call.
	* Modules/Fonts/FontModule.h: Removed category workaround.
	
2007-03-06  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (GNUSTEP_MAKEFILES): If not set, use gnustep-config
	to set it.  (GNUSTEP_INSTALLATION_DOMAIN): Removed.
	(RPM_DISABLE_RELOCATABLE): Removed.
	* SystemPreferences/GNUmakefile.preamble: Fixed
	ADDITIONAL_LIB_DIRS to work on MinGW (Problem reported by
	xavier.glattard@online.fr).
	* Modules/ColorSchemes/GNUmakefile.preamble: Same change.
	* Modules/Defaults/GNUmakefile.preamble: Same change.
	* Modules/Filesystem/GNUmakefile.preamble: Same change.
	* Modules/Fonts/GNUmakefile.preamble: Same change.
	* Modules/ModifierKeys/GNUmakefile.preamble: Same change.
	* Modules/Template/GNUmakefile.preamble: Same change.
	* Modules/Timezone/GNUmakefile.preamble: Same change.
	* Modules/Volumes/GNUmakefile.preamble: Same change.
	
2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* Modules/ColorSchemes/GNUmakefile.postamble (after-install):
	Create the GNUSTEP_LIBRARY/Colors directory before installing into
	it.

2006-11-06  Riccardo Mottola <riccardo@kaffe.org>

	* GNUmakefile: added package name and version
	* Modules/ColorSchemes/GNUmakefile.postamble: added
	* Modules/ColorSchemes/PreviewView.m,
	Modules/ColorSchemes/PreviewView.h: